# rust_cache_test

./: .gitignore  Cargo.toml  pixi.toml
.github/workflows/: rust.yml
src/: main.rs
