[package]
name = "rust_cache_test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", default-features = false }
tokio = { version = "1", features = ["full"] }


[features]
default = ["rustls-tls"]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-native-roots"
]
